--- a/Introduction.html
+++ b/Introduction.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Web Development Explorer Class</title>
+    <style>
+        img{
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            padding: 5px;
+            width: 150px;
+        }
+    </style>
 </head>
 <h><b> The Dev Class of 2022</b></h>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur assumenda distinctio doloremque doloribus esse facere hic illo ipsam iure mollitia porro provident quis,
