--- a/Photo_Album.html
+++ b/Photo_Album.html
@@ -1,10 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Photo Album</title>
+    <style>
+
+        img{
+            border: 2px solid #ddd;
+            border-radius: 4px;
+            padding: 10px;
+            width: 320px;
+        }
+        h1{
+            text-align: center;
+            font-family: "Footlight MT Light";
+            font-size: larger;
+            color: firebrick;
+        }
+        body{
+            background-color: aquamarine;
+        }
+
+    </style>
+
 </head>
+<h1><b>My photo Album</b></h1>
+
+<img src="pictures/picture_1.jpg" alt="">
+<img src="pictures/picture_2.jpg" alt="">
+<img src="pictures/picture_3.jpg" alt="">
+<img src="pictures/picture_4.jpg" alt="">
+<img src="pictures/pic5.jpg">
+<img src="Images/Image1.jpg" alt="">
+<img src="Images/Image2.jpg" alt="">
+<img src="Images/Image3.jpg" alt="">
 <body>
-$END$
+
 </body>
 </html>
